...
    if (response.statusCode == 200 || response.statusCode == 201) {
      //print('Friend request sent successfully');
      ScaffoldMessenger.of(context).showSnackBar(
                SnackBar(
                  duration: Duration(seconds: 2),
                  backgroundColor: Colors.cyan.shade400,
                  content: Text('Pedido enviado com sucesso!'),
                ),
              );
    } else {
      //print('Failed to send friend request: ${response.statusCode}');
    }
  } catch (e) {
...
    if (response.statusCode == 200) {
      //print('Friend request sent successfully');
      _loadFriendship();
      ScaffoldMessenger.of(context).showSnackBar(
                SnackBar(
                  backgroundColor: Colors.cyan.shade400,
                  content: Text('Pedido aceito com sucesso!'),
                ),
              );
    } else {
      //print('Failed to send friend request: ${response.statusCode}');
      //print(response.body);
    }
...
    if (response.statusCode == 200) {
      //print('Pedido rejeitado');
      _loadFriendship();
      ScaffoldMessenger.of(context).showSnackBar(
                SnackBar(
                  backgroundColor: Colors.cyan.shade400,
                  content: Text('Pedido rejeitado com sucesso!'),
                ),
              );
    } else {
      //print('Failed to reject friend request: ${response.statusCode}');
      //print(response.body);
    }
...
    );

    //print('Response Status: ${response.statusCode}');
    //print('Response Body: ${response.body}');

    if (response.statusCode == 200) {
      //print('Amizade excluída');
      _loadFriends();
      ScaffoldMessenger.of(context).showSnackBar(
                SnackBar(
                  backgroundColor: Colors.cyan.shade400,
                  content: Text('Amizade excluída'),
                ),
...
                      return ListView.builder(
                        itemCount: filteredUsers.length,
                        itemBuilder: (context, index) {
                          return ListTile(
                            title: Text(filteredUsers[index].name),
                            trailing: ElevatedButton(
                              key: Key("EnviarPedido"),
                              onPressed: () {
                                sendFriendRequest(filteredUsers[index].id ?? "");
                                setState(() {
                                  _showUserList = false;
                                });
                              },
...
                ),
              const SizedBox(height: 8),
              Theme(
                data: ThemeData().copyWith(dividerColor: Colors.transparent),
                child: ExpansionTile(
                  title: const Text(
                    'Amigos',
                    style: TextStyle(fontSize: 24, fontWeight: FontWeight.bold),
                  ),
                  initiallyExpanded: true,
                  childrenPadding: EdgeInsets.zero,
                  children: users.map((user) {
                    int index = users.indexOf(user);
...
                          key: Key("DesfazerAmizade"),
                          itemBuilder: (context) => [
                            PopupMenuItem(
                              child: Container(
                                width: 130,
                                child: const Text(
                                  "Desfazer amizade",
                                  textAlign: TextAlign.right,
                                ),
                              ),
                              value: index,
                            ),
                          ],
...
