...
              BottomNavigationBarItem(
                icon: Icon(Icons.layers),
                label: 'Biblioteca',
              ),
              BottomNavigationBarItem(
                icon: Icon(Icons.format_align_justify),
                label: 'Dados',
              ),
            ],
            onTap: (index) {
              switch (index) {
                case 0:
                  //Navegue para alguma página
...
